BTN-2280 add projects API functionality
